--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "scholarcore-server",
   "scripts": {
     "dev": "bun run --hot src/index.ts"
   },
@@ -7,6 +7,6 @@
     "hono": "^4.6.2"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.1.9"
   }
 }
