--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "@xata.io/client": "^0.0.0-next.v403cdd55cb26b69c074dbc07b44daa0c2a0a77b6",
     "hono": "^4.6.2"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.9"
+    "@types/bun": "^1.1.9",
+    "prisma": "^5.19.1"
   }
 }
